--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
         "squizlabs/php_codesniffer": "^3.4",
         "slevomat/coding-standard": "^5.0"
     },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/App"
+        }
+    },
     "scripts": {
         "pre-commit": [
             "echo committing as $(git config user.name)",
@@ -19,7 +24,7 @@
         ],
         "start": "php -S localhost:8080 -t public index.php",
         "test": "vendor/bin/phpunit --colors=always --fail-on-warning --fail-on-risky",
-        "cs": "vendor/bin/phpcs",
-        "cbf": "vendor/bin/phpcbf -p"
+        "cs": "vendor/bin/phpcs ./src",
+        "cbf": "vendor/bin/phpcbf -p ./src"
     }
 }
