--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require-dev": {
         "phpunit/phpunit": "^8.3",
         "squizlabs/php_codesniffer": "^3.4",
-        "slevomat/coding-standard": "^5.0"
+        "slevomat/coding-standard": "^5.0",
+        "brainmaestro/composer-git-hooks": "^2.8"
     },
     "autoload": {
         "psr-4": {
