--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
                 "vendor/bin/phpcbf || true"
             ],
             "pre-push": [
-                "composer cs",
-                "composer test"
+                "composer cs"
             ]
         }
     },
