--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "php": ">=7.2",
-        "webmozart/assert": "^1.5"
+        "webmozart/assert": "^1.5",
+        "ext-SimpleXML": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
